# src/main/java/com/tripiz/api/service/mapper/ItineraryMapper.java
@@ -21,13 +21,14 @@ public interface ItineraryMapper {
 
     List<ItineraryResponseDTO> toDTOList(List<Itinerary> itineraries);
 
-    @Mapping(source = "itineraryId", target = "itinerary_id")
-    @Mapping(source = "routeName", target = "route_name")
-    @Mapping(source = "itineraryName", target = "itinerary_name")
-    @Mapping(source = "estimatedDuration", target = "estimated_duration")
-    @Mapping(source = "departureStation", target = "departure_station")
-    @Mapping(source = "arrivalStation", target = "arrival_station")
+    @Mapping(source = "itineraryId", target = "itineraryId")
+    @Mapping(source = "routeName", target = "routeName")
+    @Mapping(source = "itineraryName", target = "itineraryName")
+    @Mapping(source = "estimatedDuration", target = "estimatedDuration")
+    @Mapping(source = "departureStation", target = "departureStation")
+    @Mapping(source = "arrivalStation", target = "arrivalStation")
     @Mapping(source = "distance", target = "distance")
+    @Mapping(source = "ticketPrice", target = "ticketPrice")
     ItineraryAdminDTO toAdminDTO(Itinerary itinerary);
 
     List<ItineraryAdminDTO> toAdminDTOList(List<Itinerary> itineraries);
